--- a/deployments/helm/dra-example-driver/templates/clusterrole.yaml
+++ b/deployments/helm/dra-example-driver/templates/clusterrole.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "dra-example-driver.fullname" . }}-role
-  namespace: {{ include "dra-example-driver.namespace" . }}
+  name: {{ include "dra-rt-driver.fullname" . }}-role
+  namespace: {{ include "dra-rt-driver.namespace" . }}
 rules:
 - apiGroups:
   - ""
   - resource.k8s.io
-  - gpu.resource.example.com
-  - nas.gpu.resource.example.com
+  - rt.resource.example.com
+  - nas.rt.resource.example.com
   resources: ["*"]
   verbs: ["*"]
