--- a/deployments/helm/dra-example-driver/templates/resourceclass.yaml
+++ b/deployments/helm/dra-example-driver/templates/resourceclass.yaml
@@ -2,5 +2,5 @@
 apiVersion: resource.k8s.io/v1alpha2
 kind: ResourceClass
 metadata:
-  name: gpu.example.com
-driverName: gpu.resource.example.com
+  name: rt.example.com
+driverName: rt.resource.example.com
