--- a/deployments/helm/dra-example-driver/templates/serviceaccount.yaml
+++ b/deployments/helm/dra-example-driver/templates/serviceaccount.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "dra-example-driver.serviceAccountName" . }}
-  namespace: {{ include "dra-example-driver.namespace" . }}
+  name: {{ include "dra-rt-driver.serviceAccountName" . }}
+  namespace: {{ include "dra-rt-driver.namespace" . }}
   labels:
-    {{- include "dra-example-driver.labels" . | nindent 4 }}
+    {{- include "dra-rt-driver.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
