--- a/deployments/helm/dra-rt-driver/crds/rt.resource.example.com_deviceclassparameters.yaml
+++ b/deployments/helm/dra-rt-driver/crds/rt.resource.example.com_deviceclassparameters.yaml
@@ -4,21 +4,21 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: rtclaimparameters.gpu.resource.example.com
+  name: deviceclassparameters.rt.resource.example.com
 spec:
-  group: gpu.resource.example.com
+  group: rt.resource.example.com
   names:
-    kind: RtClaimParameters
-    listKind: RtClaimParametersList
-    plural: rtclaimparameters
-    singular: rtclaimparameters
-  scope: Namespaced
+    kind: DeviceClassParameters
+    listKind: DeviceClassParametersList
+    plural: deviceclassparameters
+    singular: deviceclassparameters
+  scope: Cluster
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: RtClaimParameters holds the set of parameters provided when creating
-          a resource claim for a Rt.
+        description: DeviceClassParameters holds the set of parameters provided when
+          creating a resource class for this driver.
         properties:
           apiVersion:
             description: |-
@@ -38,25 +38,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: RtClaimParametersSpec is the spec for the RtClaimParameters
+            description: DeviceClassParametersSpec is the spec for the DeviceClassParametersSpec
               CRD.
             properties:
-              count:
-                type: integer
-              period:
-                description: |-
-                  A Duration represents the elapsed time between two instants
-                  as an int64 nanosecond count. The representation limits the
-                  largest representable duration to approximately 290 years.
-                format: int64
-                type: integer
-              runtime:
-                description: |-
-                  A Duration represents the elapsed time between two instants
-                  as an int64 nanosecond count. The representation limits the
-                  largest representable duration to approximately 290 years.
-                format: int64
-                type: integer
+              deviceSelector:
+                items:
+                  description: DeviceSelector allows one to match on a specific type
+                    of Device as part of the class.
+                  properties:
+                    name:
+                      type: string
+                    type:
+                      type: string
+                  required:
+                  - name
+                  - type
+                  type: object
+                type: array
             type: object
         type: object
     served: true
