--- a/deployments/helm/dra-rt-driver/crds/rt.resource.example.com_rtclaimparameters.yaml
+++ b/deployments/helm/dra-rt-driver/crds/rt.resource.example.com_rtclaimparameters.yaml
@@ -4,21 +4,21 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: deviceclassparameters.gpu.resource.example.com
+  name: rtclaimparameters.rt.resource.example.com
 spec:
-  group: gpu.resource.example.com
+  group: rt.resource.example.com
   names:
-    kind: DeviceClassParameters
-    listKind: DeviceClassParametersList
-    plural: deviceclassparameters
-    singular: deviceclassparameters
-  scope: Cluster
+    kind: RtClaimParameters
+    listKind: RtClaimParametersList
+    plural: rtclaimparameters
+    singular: rtclaimparameters
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: DeviceClassParameters holds the set of parameters provided when
-          creating a resource class for this driver.
+        description: RtClaimParameters holds the set of parameters provided when creating
+          a resource claim for a Rt.
         properties:
           apiVersion:
             description: |-
@@ -38,23 +38,25 @@ spec:
           metadata:
             type: object
           spec:
-            description: DeviceClassParametersSpec is the spec for the DeviceClassParametersSpec
+            description: RtClaimParametersSpec is the spec for the RtClaimParameters
               CRD.
             properties:
-              deviceSelector:
-                items:
-                  description: DeviceSelector allows one to match on a specific type
-                    of Device as part of the class.
-                  properties:
-                    name:
-                      type: string
-                    type:
-                      type: string
-                  required:
-                  - name
-                  - type
-                  type: object
-                type: array
+              count:
+                type: integer
+              period:
+                description: |-
+                  A Duration represents the elapsed time between two instants
+                  as an int64 nanosecond count. The representation limits the
+                  largest representable duration to approximately 290 years.
+                format: int64
+                type: integer
+              runtime:
+                description: |-
+                  A Duration represents the elapsed time between two instants
+                  as an int64 nanosecond count. The representation limits the
+                  largest representable duration to approximately 290 years.
+                format: int64
+                type: integer
             type: object
         type: object
     served: true
