--- a/demo/rt-test1.yaml
+++ b/demo/rt-test1.yaml
@@ -5,23 +5,23 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: gpu-test1
+  name: rt-test1
 
 ---
 apiVersion: resource.k8s.io/v1alpha2
 kind: ResourceClaimTemplate
 metadata:
-  namespace: gpu-test1
-  name: gpu.example.com
+  namespace: rt-test1
+  name: rt.example.com
 spec:
   spec:
-    resourceClassName: gpu.example.com
+    resourceClassName: rt.example.com
 
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  namespace: gpu-test1
+  namespace: rt-test1
   name: pod0
   labels:
     app: pod
@@ -33,17 +33,17 @@ spec:
     args: ["export; sleep 9999"]
     resources:
       claims:
-      - name: gpu
+      - name: rtcpu
   resourceClaims:
-  - name: gpu
+  - name: rtcpu
     source:
-      resourceClaimTemplateName: gpu.example.com
+      resourceClaimTemplateName: rt.example.com
 
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  namespace: gpu-test1
+  namespace: rt-test1
   name: pod1
   labels:
     app: pod
@@ -55,8 +55,8 @@ spec:
     args: ["export; sleep 9999"]
     resources:
       claims:
-      - name: gpu
+      - name: rtcpu
   resourceClaims:
-  - name: gpu
+  - name: rtcpu
     source:
-      resourceClaimTemplateName: gpu.example.com
+      resourceClaimTemplateName: rt.example.com
