--- a/demo/rt-test1.yaml
+++ b/demo/rt-test1.yaml
@@ -16,6 +16,23 @@ metadata:
 spec:
   spec:
     resourceClassName: rt.example.com
+    parametersRef:
+      apiVersion: v1
+      kind: rtClaimParameters
+      name: rt.example.com
+
+---
+
+apiVersion: resource.k8s.io/v1alpha1
+kind: rtClaimParameters
+metadata:
+  namespace: rt-test1
+  name: rt.example.com
+spec:
+  spec:
+    count: 1
+    runtime: 100
+    period: 1000
 
 ---
 apiVersion: v1
