--- a/demo/rt-test1.yaml
+++ b/demo/rt-test1.yaml
@@ -23,7 +23,7 @@ spec:
 
 ---
 
-apiVersion: resource.k8s.io/v1alpha1
+apiVersion: rt.resource.example.com/v1alpha1
 kind: RtClaimParameters
 metadata:
   namespace: rt-test1
