fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -84,6 +84,16 @@ spec:
                       type: object
                   type: object
                 type: object
+              allocatedUtilToCpu:
+                additionalProperties:
+                  description: AllocatedUtil represents Utilisation to CPU map.
+                  properties:
+                    id:
+                      type: integer
+                    util:
+                      type: integer
+                  type: object
+                type: object
               preparedClaims:
                 additionalProperties:
                   description: PreparedDevices represents a set of prepared devices
