fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -92,6 +92,9 @@ spec:
                       type: integer
                     util:
                       type: integer
+                  required:
+                      - id
+                      - util
                   type: object
                 type: object
               preparedClaims:
