fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -84,19 +84,7 @@ spec:
                       type: object
                   type: object
                 type: object
-              allocatedUtilToCpu:
-                additionalProperties:
-                  description: AllocatedUtil represents Utilisation to CPU map.
-                  properties:
-                    id:
-                      type: integer
-                    util:
-                      type: integer
-                  required:
-                      - id
-                      - util
-                  type: object
-                type: object
+              allocatedUtilToCpu: {}
               preparedClaims:
                 additionalProperties:
                   description: PreparedDevices represents a set of prepared devices
