fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -84,7 +84,15 @@ spec:
                       type: object
                   type: object
                 type: object
-              allocatedUtilToCpu: {}
+              AllocatedUtilToCpu:
+                type: object
+                additionalProperties:
+                  type: object
+                  properties:
+                    Util:
+                      type: integer
+                    ID:
+                      type: integer
               preparedClaims:
                 additionalProperties:
                   description: PreparedDevices represents a set of prepared devices
