--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -84,14 +84,12 @@ spec:
                       type: object
                   type: object
                 type: object
-              AllocatedUtilToCpu:
+              allocatedUtilToCpu:
                 items:
                   description: AllocatableDevice represents an allocatable device
                     on a node.
                   properties:
-                    rtcpu:
-                      description: AllocatableGpu represents an allocatable GPU on
-                        a node.
+                    rtutil:
                       properties:
                         id:
                           type: integer
