fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -77,6 +77,10 @@ spec:
                                 type: integer
                               runtime:
                                 type: integer
+                              podUID:
+                                type: string
+                              containerName:
+                                type: string
                             type: object
                           type: array
                       required:
