fix the error with kubeletplugin

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -107,6 +107,8 @@ spec:
               allocatedUtilToCpu:
                 properties:
                   cpus: {}
+                required:
+                - cpus
                 type: object
               preparedClaims:
                 additionalProperties:
