--- a/deployments/helm/dra-rt-driver/values.yaml
+++ b/deployments/helm/dra-rt-driver/values.yaml
@@ -11,7 +11,7 @@ allowDefaultNamespace: false
 
 imagePullSecrets: []
 image:
-  repository: nasimm/dra-rt-driver
+  repository: registry.example.com/dra-rt-driver
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
