--- a/demo/rt-test1-1.yaml
+++ b/demo/rt-test1-1.yaml
@@ -2,16 +2,16 @@
 # Each container asking for 1 distinct GPU
 
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: rt-test1
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: rt11
 
 ---
-apiVersion: resource.k8s.io/v1alpha3
+apiVersion: resource.k8s.io/v1alpha2
 kind: ResourceClaimTemplate
 metadata:
-  namespace: rt-test1
+  namespace: rt11
   name: rt.example.com
 spec:
   spec:
@@ -26,18 +26,18 @@ spec:
 apiVersion: rt.resource.example.com/v1alpha1
 kind: RtClaimParameters
 metadata:
-  namespace: rt-test1
+  namespace: rt11
   name: rtclaims
 spec:
-  count: 1
-  runtime: 100
-  period: 1000
+  count: 2
+  runtime: 1000
+  period: 1000000
 
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  namespace: rt-test1
+  namespace: rt11
   name: pod0-1
   labels:
     app: pod
@@ -50,29 +50,19 @@ spec:
     resources:
       claims:
       - name: rtcpu
-  resourceClaims:
-  - name: rtcpu
-    source:
-      resourceClaimTemplateName: rt.example.com
-
----
-apiVersion: v1
-kind: Pod
-metadata:
-  namespace: rt-test1
-  name: pod1-1
-  labels:
-    app: pod
-spec:
-  containers:
-  - name: ctr0
+  - name: ctr1
     image: ubuntu:22.04
     command: ["bash", "-c"]
     args: ["export; sleep 9999"]
     resources:
       claims:
-      - name: rtcpu
+      - name: rtcpu1
   resourceClaims:
   - name: rtcpu
     source:
       resourceClaimTemplateName: rt.example.com
+  - name: rtcpu1
+    source:
+      resourceClaimTemplateName: rt.example.com
+
+---
