reading the cpusets

--- a/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
+++ b/deployments/helm/dra-rt-driver/crds/nas.rt.resource.example.com_nodeallocationstates.yaml
@@ -102,6 +102,10 @@ spec:
                       type: object
                     podName:
                       type: string
+                    podRuntimes:
+                      items:
+                        type: integer
+                      type: array
                   type: object
                 type: object
               allocatedUtilToCpu:
