reading the cpusets

--- a/deployments/helm/dra-rt-driver/templates/clusterrole.yaml
+++ b/deployments/helm/dra-rt-driver/templates/clusterrole.yaml
@@ -10,5 +10,6 @@ rules:
   - resource.k8s.io
   - rt.resource.example.com
   - nas.rt.resource.example.com
+  - metrics.k8s.io
   resources: ["*"]
   verbs: ["*"]
