--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -17,4 +17,4 @@ run:
 
 linters-settings:
   goimports:
-    local-prefixes: "sigs.k8s.io/dra-example-driver"
+    local-prefixes: "github.com/nasim-samimi/dra-rt-driver"
