--- a/kubeadm-config.yaml
+++ b/kubeadm-config.yaml
@@ -1,6 +1,8 @@
 apiVersion: kubeadm.k8s.io/v1beta3
 kind: ClusterConfiguration
 kubernetesVersion: v1.30.0 # Specify your Kubernetes version here
+networking:
+  podSubnet: "192.168.0.0/16"
 apiServer:
   extraArgs:
     runtime-config: "resource.k8s.io/v1alpha2=true"
