--- a/kubeadm-config.yaml
+++ b/kubeadm-config.yaml
@@ -13,7 +13,7 @@ scheduler:
   extraArgs:
     featureGates:  "DynamicResourceAllocation: true"
 ---
-apiVersion: kubelet.config.k8s/v1beta1
+apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
 featureGates:  
   DynamicResourceAllocation: true #can be given separately to worker nodes
