--- a/docker/Dockerfile.devel
+++ b/docker/Dockerfile.devel
@@ -11,13 +11,13 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-ARG GOLANG_VERSION=x.x.x
+ARG GOLANG_VERSION=1.25.0
 FROM golang:${GOLANG_VERSION}
 
-# RUN go install github.com/gordonklaus/ineffassign@latest && \
-#     go install github.com/client9/misspell/cmd/misspell@latest
+RUN go install github.com/gordonklaus/ineffassign@latest && \
+    go install github.com/client9/misspell/cmd/misspell@latest
 
-# RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.52.0
-# RUN go install github.com/matryer/moq@latest
-# RUN go install sigs.k8s.io/controller-tools/cmd/controller-gen@v0.14.0
-# RUN go install k8s.io/code-generator/cmd/client-gen@v0.29.2
+RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.52.0
+RUN go install github.com/matryer/moq@latest
+RUN go install sigs.k8s.io/controller-tools/cmd/controller-gen@v0.14.0
+RUN go install k8s.io/code-generator/cmd/client-gen@v0.29.2
